--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5500/Distanziamento
-#spring.datasource.url=jdbc:postgresql://db_Distanziamento:5432/Distanziamento
+#spring.datasource.url=jdbc:postgresql://localhost:5500/Distanziamento
+spring.datasource.url=jdbc:postgresql://db_Distanziamento:5432/Distanziamento
 spring.datasource.username=postgres
 spring.datasource.password=password
 
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
