--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.datasource.url=jdbc:postgresql://db_Distanziamento:5432/Distanziamento
 spring.datasource.username=postgres
 spring.datasource.password=password
+server.port=8085
 
 
 #spring.jpa.hibernate.ddl-auto=
